<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:orientation="vertical"
    android:clickable="true"
    android:focusable="true"
    android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/auth_screen"
                android:layout_width="match_parent"
                android:layout_height="172dp"
                android:gravity="center"
                android:src="@drawable/ic_logo"
                android:layout_marginTop="75dp" />

            <TextView
                android:id="@+id/no_access"

                android:visibility="invisible"

                android:layout_width="match_parent"
                android:layout_height="15dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="3dp"
                android:layout_marginRight="90dp"
                android:textSize="12sp"
                android:paddingStart="1dp"
                android:gravity="bottom"
                android:textColor="#FF0000"
                android:textAlignment="textStart"
                android:font="@font/lato"
                android:text="@string/no_access"

                tools:ignore="RtlCompat,RtlSymmetry,SmallSp" />

            <EditText
                android:id="@+id/login_reg"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginRight="90dp"
                android:layout_marginLeft="90dp"
                android:hint="@string/login"
                android:textColorHint="#656567"
                android:paddingStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:inputType="textPersonName"
                tools:ignore="RtlSymmetry"


                android:background="@drawable/auth_fields"/>

            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginRight="90dp"
                android:layout_marginLeft="90dp"
                android:hint="@string/pass"
                android:textColorHint="#656567"
                android:paddingStart="10dp"
                android:textSize="15sp"
                android:textColor="@color/white"
                android:inputType="textPassword"
                tools:ignore="RtlSymmetry"

                android:layout_marginTop="7dp"
                android:background="@drawable/auth_fields" />

            <Button
                android:id="@+id/button_enter"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="10dp"

                android:layout_marginRight="90dp"
                android:backgroundTint="#cacacc"
                android:font="@font/lato"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:letterSpacing="0.05"
                android:text="@string/enter"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="9dp"
                app:rippleColor="@color/mtrl_btn_ripple_color" />

            <Button
                android:id="@+id/button_reg"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="7dp"

                android:layout_marginRight="90dp"
                android:backgroundTint="#00AF78"
                android:font="@font/lato"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:letterSpacing="0.05"
                android:text="@string/reg"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="9dp"
                app:rippleColor="@color/mtrl_btn_ripple_color" />

            <Button
                android:id="@+id/forgot_pass"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_gravity="right"
                android:layout_marginRight="90dp"
                android:layout_marginTop="5dp"

                android:backgroundTint="@color/dark"
                android:font="@font/lato"
                android:insetLeft="-15dp"
                android:insetTop="0dp"
                android:insetRight="-15dp"
                android:insetBottom="0dp"
                android:letterSpacing="0.05"
                android:outlineProvider="none"
                android:text="@string/forgot_pass"


                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:cornerRadius="9dp"
                app:rippleColor="@color/mtrl_btn_ripple_color" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_below="@+id/already_have_an_account"
        android:layout_marginTop="15dp"
        android:gravity="center">
        <TextView
            android:id="@+id/auth_through"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"


            android:text="Авторизироваться через"
            android:font="@font/lato"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:gravity="center"/>
        <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@id/auth_through">
        <ImageButton
            android:id="@+id/vk_enter"
            android:layout_width="56dp"
            android:layout_height="50dp"


            android:backgroundTint="@color/dark"
            android:scaleType="center"
            android:src="@drawable/ic_vk_auth" />

        <ImageButton
            android:id="@+id/google_enter"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:layout_toRightOf="@id/vk_enter"


            android:backgroundTint="@color/dark"
            android:scaleType="center"
            android:src="@drawable/ic_google_auth" />
    </RelativeLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/button_enter_as"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"


        android:backgroundTint="@color/dark"
        android:font="@font/lato"
        android:insetLeft="0dp"
        android:insetTop="0dp"
        android:insetRight="0dp"
        android:insetBottom="0dp"
        android:letterSpacing="0.05"
        android:outlineProvider="none"

        android:text="@string/enter2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:cornerRadius="9dp"
        app:rippleColor="@color/mtrl_btn_ripple_color" />


</LinearLayout>