<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignInActivity"
    android:background="@color/dark"
   >

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/auth_screen2"
                android:layout_width="match_parent"
                android:layout_height="172dp"
                android:layout_marginTop="75dp"
                android:gravity="center"
                android:src="@drawable/ic_logo" />

            <EditText
                android:id="@+id/login_reg"
                android:layout_width="match_parent"

                android:layout_height="33dp"
                android:layout_below="@+id/auth_screen2"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="38dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/auth_fields"
                android:hint="@string/login"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="#656567"
                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/pass_reg"

                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_below="@+id/login_reg"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/auth_fields"
                android:hint="@string/pass"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="#656567"

                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/repeat_pass_reg"

                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_below="@+id/pass_reg"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/auth_fields"
                android:hint="@string/repeat_pass"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="#656567"

                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/nickname_reg"

                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_below="@+id/repeat_pass_reg"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/auth_fields"
                android:hint="@string/nickname"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="#656567"

                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/email_reg"

                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_below="@+id/nickname_reg"
                android:layout_gravity="center"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="7dp"
                android:layout_marginRight="90dp"
                android:background="@drawable/auth_fields"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress"
                android:paddingStart="10dp"
                android:textColor="@color/white"
                android:textColorHint="#656567"

                android:textSize="15sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/button_reg2"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:layout_below="@+id/email_reg"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="10dp"

                android:layout_marginRight="90dp"
                android:backgroundTint="#00AF78"
                android:fontFamily="@font/lato"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:letterSpacing="0.05"
                android:text="@string/reg"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:cornerRadius="9dp"
                app:rippleColor="@color/mtrl_btn_ripple_color" />

            <Button
                android:id="@+id/already_have_an_account"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_below="@+id/button_reg2"
                android:layout_alignRight="@+id/button_reg2"
                android:layout_marginTop="5dp"


                android:backgroundTint="@color/dark"
                android:fontFamily="@font/lato"
                android:insetLeft="-15dp"
                android:insetTop="0dp"
                android:insetRight="-15dp"
                android:insetBottom="0dp"
                android:letterSpacing="0.05"
                android:outlineProvider="none"
                android:text="@string/already_have_an_account"

                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="11sp"
                app:cornerRadius="9dp"
                app:rippleColor="@color/mtrl_btn_ripple_color" />

            <ImageButton
                android:id="@+id/vk_enter"
                android:layout_width="56dp"
                android:layout_height="50dp"
                android:layout_below="@+id/already_have_an_account"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/dark"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_vk_logo" />

            <ImageButton
                android:id="@+id/google_enter"
                android:layout_width="56dp"
                android:layout_height="50dp"
                android:layout_below="@+id/already_have_an_account"
                android:layout_marginTop="10dp"
                android:layout_toRightOf="@+id/vk_enter"
                android:backgroundTint="@color/dark"
                android:scaleType="centerInside"
                android:src="@drawable/ic_google_logo" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>